[package]
name = "archon"
version = "1.1.0-edge7"
authors = ["Bloodreaver https://github.com/Bloodreaver"]
description = """
A multi-chain, collision-free proof-of-capacity mining proxy.
"""
build = "build.rs"
keywords = ["poc", "proxy", "rust", "crypto", "cryptocurrency", "burst", "bhd", "boom", "boomcoin", "burstcoin", "multi-chain", "collision-free"]
license = "GPL-3.0 or later"
edition = "2018"

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
hyper = "0.12"
mime = "0.3"
lazy_static = "1.4"
rand = "0.7"
reqwest = "0.9"
time = "0.1"
actix = "0.7"
actix-web = "0.7"
fern = "0.5"
log = "0.4"
semver = "0.9"
tungstenite = "0.9"
tokio-tungstenite = "0.9"
url = "2.1"
futures = "0.1"
tokio = "0.1"
crossbeam = "0.7"
gethostname = "0.2"
ipaddress = "0.1"
ansi_term = "0.12"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[target.arm-unknown-linux-gnueabihf.build-dependencies]
openssl = { version = "*", features = ["vendored"] }